# simple-search-server

./: .gitignore  CMakeLists.txt  LICENSE.MIT  README.md  config.h  config.json  converterjson.cpp  converterjson.h  main.cpp
cmake/: search-engine-config.cmake.in  utils.cmake
docs/: annotated.html  classConfigFileIsEmptyException-members.html  classConfigFileIsEmptyException.html  classConfigFileIsEmptyException__coll__graph.map  classConfigFileIsEmptyException__inherit__graph.md5  classConfigFileMissingException-members.html  classConfigFileMissingException.html  classConfigFileMissingException__coll__graph.map  classConfigFileMissingException__coll__graph.md5  classConfigParserException-members.html  classConfigParserException.html  classConfigParserException__coll__graph.map  classConfigParserException__coll__graph.md5  classConfigParserException__inherit__graph.map  classConfigParserException__inherit__graph.md5  classFilesSectionMissingException-members.html  classFilesSectionMissingException.html  classFilesSectionMissingException__coll__graph.map  classFilesSectionMissingException__inherit__graph.md5  classIncorrectVersionException-members.html  classIncorrectVersionException.html  classIncorrectVersionException__coll__graph.map  classIncorrectVersionException__coll__graph.md5  classNoMaxResponsesException-members.html  classNoMaxResponsesException.html  classNoMaxResponsesException__inherit__graph.map  classNoMaxResponsesException__inherit__graph.md5  classes.html  classsearch__server_1_1ConverterJSON-members.html  classsearch__server_1_1ConverterJSON.html  classsearch__server_1_1SearchServer-members.html  classsearch__server_1_1SearchServer.html  classsearch__server_1_1inverted__index_1_1InvertedIndex-members.html  classsearch__server_1_1inverted__index_1_1InvertedIndex.html  config-file-is-empty-exception_8h_source.html  config-file-missing-exception_8h_source.html  config-parser-exception_8h_source.html  converter-config_8h_source.html  converterjson_8h_source.html  dir_06ec884a0825782b323e4577406ae7aa.html  (+50 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
examples/demo/: CMakeLists.txt  file003.txt  main.cpp
include/: converterjson.h  export.h  inverted-index.h  search-server.h
include/exceptions/: config-file-is-empty-exception.h
src/: CMakeLists.txt  config-file-is-empty-exception.cpp  config-file-missing-exception.cpp  converter-config.cpp  converterjson.cpp  inverted-index.cpp  main.cpp  search-server.cpp
src/exceptions/: config-file-is-empty-exception.cpp  config-file-missing-exception.cpp  config-parser-exception.cpp  files-section-missing-exception.cpp  incorrect-version-exception.cpp  no-max-responses-exception.cpp
src/exceptions/include/: config-file-is-empty-exception.h  config-file-missing-exception.h  config-parser-exception.h  files-section-missing-exception.h  incorrect-version-exception.h  no-max-responses-exception.h
src/include/: config-file-is-empty-exception.h  config-file-missing-exception.h  converter-config.h  converterjson.h  inverted-index.h  requests.h  search-server.h
test/: CMakeLists.txt
test/testSearchServer/: CMakeLists.txt  config-test.h.in  good_config.json  no_max_responses_config.json  test_converterjson.cpp  test_inverted_index.cpp  test_search_server.cpp  test_search_server.h
test/testSearchServer/confs/: good_config.json  missed_data_file_config.json
test/testSearchServer/debug/: config.json  file002.txt  file004.txt  requests.json
test/testSearchServer/requests/: many_requests.json  requests.json
test/testSearchServer/resources/: file001.txt
tests/testSearchServer/: CMakeLists.txt  config-test.h.in  test_converterjson.cpp
tests/testSearchServer/confs/: incorrect_version_config.json  wo_files_section_config.json  wo_required_config.json
tests/testSearchServer/requests/: long_requests_lines.json
